--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Curriculo</title>
 </head>
+
 <body>
-    
+
+    <!--NOME
+    Dados de contato-->
+    <h1>Bruno Yathan Diedrich Kehrwald</h1>
+    <p>
+        <strong>Endereço:</strong> Novo Hamburgo - Rio Grande do Sul.
+        <br>
+        <strong>Email:</strong> brunodiedrich@gmail.com
+        <br>
+        <strong>Linkedin:</strong><a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/"> Bruno-Yathan</a>
+        <br>
+        <strong>Telefone:</strong> (51) 999273147
+    </p>
+    <hr>
+
+    <!--Resumo-->
+
+    <!--Formação-->
+
+    <!--Experiencia-->
+
 </body>
+
 </html>
