Resumo quase pronto

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 
     <!--Resumo-->
 
+    <h2>Resumo:</h2>
+    <p style="text-align: left;">
+        - Estudante de Front-End. Atualmente estou buscando oportunidades <br>
+          que permitam me desenvolver profissionalmentee ganhar experiência dentro do mercado, <br>
+          colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br> 
+          #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
+    </p>
+    <hr>
+
     <!--Formação-->
 
     <!--Experiencia-->
