Parte de formação concluida

--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
           #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
     </p>
     <hr>
+    
 
     <!--Formação-->
-
+    <h2>Formação</h2>
+    <p>
+        Ensino médio completo: Encceja (O Exame Nacional para Certificação de Competências de Jovens e Adultos 2019).
+    </p>
+    <hr>
     <!--Experiencia-->
 
 </body>
