Terminado a parte de Experiência

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
     <h2>Resumo:</h2>
     <p style="text-align: left;">
-        - Estudante de Front-End. Atualmente estou buscando oportunidades <br>
-          que permitam me desenvolver profissionalmentee ganhar experiência dentro do mercado, <br>
-          colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br> 
-          #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
+        Estudante de Front-End. Atualmente estou buscando oportunidades <br>
+        que permitam me desenvolver profissionalmentee ganhar experiência dentro do mercado, <br>
+        colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br>
+        #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
     </p>
     <hr>
-    
+
 
     <!--Formação-->
     <h2>Formação</h2>
@@ -43,6 +43,16 @@
     </p>
     <hr>
     <!--Experiencia-->
+    <h2>Experiência</h2>
+
+    <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
+        Onde realizei meu primeiro estágio na vida, onde aprendi os conceitos basicos/intermediarios de SEO. <br>
+        Fazendo otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas com por exemplo <br>
+        o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
+    </p>
+    <hr>
+
+    
 
 </body>
 
