adicionando pasta 'assets' e iniciando a parte de certificação

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     </p>
     <hr>
 
+    <!--Certificações-->
+    <h2>Certificações</h2>
     
+    <!--Objetivo deste curriculo-->
 
 </body>
 
