terminado a parte de certificações

--- a/index.html
+++ b/index.html
@@ -47,14 +47,22 @@
 
     <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
         Onde realizei meu primeiro estágio na vida, onde aprendi os conceitos basicos/intermediarios de SEO. <br>
-        Fazendo otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas com por exemplo <br>
+        Fazendo otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas com por
+        exemplo <br>
         o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
     </p>
     <hr>
 
     <!--Certificações-->
     <h2>Certificações</h2>
-    
+   
+    <ul>
+        <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Formação Iniciante em Programação.</strong></li> <br>
+        <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>React.</strong></li> <br>
+        <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Git e Github.</strong></li> <br>
+        <li><img src="./assets/Teufuturoicone.png" width="50px"> <strong>TeuFuturo2021.</strong></li> <br>
+
+    </ul>
     <!--Objetivo deste curriculo-->
 
 </body>
