terminado a parte do objetivo

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 
     </ul>
     <!--Objetivo deste curriculo-->
+    <h2>Objetivo deste Curriculo</h2>
+    <p>Este curriculo tem como objetivo provar as minhas habilidades basicas de HTML5</p>
 
 </body>
 
