adicionando meu Linkedin no 'objetivo'

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     </ul>
     <!--Objetivo deste curriculo-->
     <h2>Objetivo deste Curriculo</h2>
-    <p>Este curriculo tem como objetivo provar as minhas habilidades basicas de HTML5</p>
+    <p>Este curriculo tem como objetivo provar as minhas habilidades basicas de HTML5.<br>
+    Todas as informações presente neste curriculo poderão ser encontradass no meu Linkedin: <a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/"Bruno-Yathan>Bruno-Yathan</a></p>
 
 </body>
 
