Reajustando estrutura HTML parte 1

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Curriculo</title>
+
+    <title>Bruno Yathan</title>
 </head>
 
 <body>
 
-    <!--NOME
-    Dados de contato-->
+    <!--Dados do usúario-->
     <h1>Bruno Yathan Diedrich Kehrwald</h1>
     <p>
         <strong>Endereço:</strong> Novo Hamburgo - Rio Grande do Sul.
@@ -22,10 +22,8 @@
         <br>
         <strong>Telefone:</strong> (51) 999273147
     </p>
-    <hr>
 
     <!--Resumo-->
-
     <h2>Resumo:</h2>
     <p style="text-align: left;">
         Estudante de Front-End. Atualmente estou buscando oportunidades <br>
@@ -33,15 +31,13 @@
         colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br>
         #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
     </p>
-    <hr>
-
-
+    
     <!--Formação-->
     <h2>Formação</h2>
     <p>
         Ensino médio completo: Encceja (O Exame Nacional para Certificação de Competências de Jovens e Adultos 2019).
     </p>
-    <hr>
+    
     <!--Experiencia-->
     <h2>Experiência</h2>
 
@@ -51,8 +47,7 @@
         exemplo <br>
         o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
     </p>
-    <hr>
-
+  
     <!--Certificações-->
     <h2>Certificações</h2>
    
@@ -61,12 +56,12 @@
         <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>React.</strong></li> <br>
         <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Git e Github.</strong></li> <br>
         <li><img src="./assets/Teufuturoicone.png" width="50px"> <strong>TeuFuturo2021.</strong></li> <br>
-
     </ul>
     <!--Objetivo deste curriculo-->
     <h2>Objetivo deste Curriculo</h2>
     <p>Este curriculo tem como objetivo provar as minhas habilidades basicas de HTML5.<br>
     Todas as informações presente neste curriculo poderão ser encontradass no meu Linkedin: <a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/"Bruno-Yathan>Bruno-Yathan</a></p>
+
 
 </body>
 
