Adicionado arquivo CSS e começando a estilização

--- a/index.html
+++ b/index.html
@@ -5,63 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
 
     <title>Bruno Yathan</title>
 </head>
 
 <body>
+    <div class="curriculo-container">
+        <!--Dados do usúario-->
+        <h1>Bruno Yathan Diedrich Kehrwald</h1>
+        <p>
+            <strong>Endereço:</strong> Novo Hamburgo - Rio Grande do Sul.
+            <br>
+            <strong>Email:</strong> brunodiedrich@gmail.com
+            <br>
+            <strong>Linkedin:</strong><a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/">
+                Bruno-Yathan</a>
+            <br>
+            <strong>Telefone:</strong> (51) 999273147
+        </p>
 
-    <!--Dados do usúario-->
-    <h1>Bruno Yathan Diedrich Kehrwald</h1>
-    <p>
-        <strong>Endereço:</strong> Novo Hamburgo - Rio Grande do Sul.
-        <br>
-        <strong>Email:</strong> brunodiedrich@gmail.com
-        <br>
-        <strong>Linkedin:</strong><a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/"> Bruno-Yathan</a>
-        <br>
-        <strong>Telefone:</strong> (51) 999273147
-    </p>
+        <!--Resumo-->
+        <h3>Resumo:</h3>
+        <p style="text-align: left;">
+            Estudante de Front-End. Atualmente estou buscando oportunidades <br>
+            que permitam me desenvolver profissionalmentee ganhar experiência dentro do mercado, <br>
+            colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br>
+            #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
+        </p>
 
-    <!--Resumo-->
-    <h2>Resumo:</h2>
-    <p style="text-align: left;">
-        Estudante de Front-End. Atualmente estou buscando oportunidades <br>
-        que permitam me desenvolver profissionalmentee ganhar experiência dentro do mercado, <br>
-        colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br>
-        #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
-    </p>
-    
-    <!--Formação-->
-    <h2>Formação</h2>
-    <p>
-        Ensino médio completo: Encceja (O Exame Nacional para Certificação de Competências de Jovens e Adultos 2019).
-    </p>
-    
-    <!--Experiencia-->
-    <h2>Experiência</h2>
+        <!--Formação-->
+        <h3>Formação:</h3>
+        <p>
+            Ensino médio completo: Encceja (O Exame Nacional para Certificação de Competências de Jovens e Adultos
+            2019).
+        </p>
 
-    <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
-        Onde realizei meu primeiro estágio na vida, onde aprendi os conceitos basicos/intermediarios de SEO. <br>
-        Fazendo otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas com por
-        exemplo <br>
-        o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
-    </p>
-  
-    <!--Certificações-->
-    <h2>Certificações</h2>
-   
-    <ul>
-        <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Formação Iniciante em Programação.</strong></li> <br>
-        <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>React.</strong></li> <br>
-        <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Git e Github.</strong></li> <br>
-        <li><img src="./assets/Teufuturoicone.png" width="50px"> <strong>TeuFuturo2021.</strong></li> <br>
-    </ul>
-    <!--Objetivo deste curriculo-->
-    <h2>Objetivo deste Curriculo</h2>
-    <p>Este curriculo tem como objetivo provar as minhas habilidades basicas de HTML5.<br>
-    Todas as informações presente neste curriculo poderão ser encontradass no meu Linkedin: <a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/"Bruno-Yathan>Bruno-Yathan</a></p>
+        <!--Experiencia-->
+        <h3>Experiência:</h3>
 
+        <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
+            Onde realizei meu primeiro estágio na vida, onde aprendi os conceitos basicos/intermediarios de SEO. <br>
+            Fazendo otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas com
+            por
+            exemplo <br>
+            o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
+        </p>
+
+        <!--Certificações-->
+        <h3>Certificações:</h3>
+
+        <ul>
+            <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Formação Iniciante em Programação.</strong>
+            </li> <br>
+            <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>React.</strong></li> <br>
+            <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Git e Github.</strong></li> <br>
+            <li><img src="./assets/Teufuturoicone.png" width="50px"> <strong>TeuFuturo2021.</strong></li> <br>
+        </ul>
+    </div>
 
 </body>
 
