--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="curriculo-container">
         <!--Dados do usúario-->
         <h1>Bruno Yathan Diedrich Kehrwald</h1>
-        <p>
+        <p class="dados_pessoais">
             <strong>Endereço:</strong> Novo Hamburgo - Rio Grande do Sul.
             <br>
             <strong>Email:</strong> brunodiedrich@gmail.com
@@ -28,16 +28,16 @@
         <!--Resumo-->
         <h3>Resumo:</h3>
         <p style="text-align: left;">
-            Estudante de Front-End. Atualmente estou buscando oportunidades <br>
-            que permitam me desenvolver profissionalmentee ganhar experiência dentro do mercado, <br>
-            colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, <br>
+            Estudante de Front-End. Atualmente estou buscando oportunidades 
+            que permitam me desenvolver profissionalmente e ganhar experiência dentro do mercado, 
+            colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, 
             #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
         </p>
 
         <!--Formação-->
         <h3>Formação:</h3>
         <p>
-            Ensino médio completo: Encceja (O Exame Nacional para Certificação de Competências de Jovens e Adultos
+            Ensino Médio Completo: Encceja (O Exame Nacional para Certificação de Competências de Jovens e Adultos
             2019).
         </p>
 
@@ -45,11 +45,9 @@
         <h3>Experiência:</h3>
 
         <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
-            Onde realizei meu primeiro estágio na vida, onde aprendi os conceitos basicos/intermediarios de SEO. <br>
-            Fazendo otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas com
-            por
-            exemplo <br>
-            o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
+            Onde realizei meu primeiro estágio na vida durante 3 mêses. <br> Foi onde eu aprendi os conceitos basicos de SEO, 
+            realizando otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas como
+            por exemplo o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
         </p>
 
         <!--Certificações-->
