--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <!--Resumo-->
         <h3>Resumo:</h3>
         <p style="text-align: left;">
-            Estudante de Front-End. Atualmente estou buscando oportunidades 
-            que permitam me desenvolver profissionalmente e ganhar experiência dentro do mercado, 
-            colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED, 
+            Estudante de Front-End. Atualmente estou buscando oportunidades
+            que permitam me desenvolver profissionalmente e ganhar experiência dentro do mercado,
+            colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED,
             #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
         </p>
 
@@ -45,8 +45,10 @@
         <h3>Experiência:</h3>
 
         <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
-            Onde realizei meu primeiro estágio na vida durante 3 mêses. <br> Foi onde eu aprendi os conceitos basicos de SEO, 
-            realizando otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas como
+            Onde realizei meu primeiro estágio na vida durante 3 mêses. <br> Foi onde eu aprendi os conceitos basicos de
+            SEO,
+            realizando otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas
+            como
             por exemplo o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
         </p>
 
@@ -54,11 +56,15 @@
         <h3>Certificações:</h3>
 
         <ul>
-            <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Formação Iniciante em Programação.</strong>
+            <img src="./assets/Alura icon.jfif" width="50px">
+            <li> <strong>Formação Iniciante em Programação</strong>
             </li> <br>
-            <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>React.</strong></li> <br>
-            <li><img src="./assets/Alura icon.jfif" width="50px"> <strong>Git e Github.</strong></li> <br>
-            <li><img src="./assets/Teufuturoicone.png" width="50px"> <strong>TeuFuturo2021.</strong></li> <br>
+            <img src="./assets/Alura icon.jfif" width="50px">
+            <li> <strong>React</strong></li> <br>
+            <img src="./assets/Alura icon.jfif" width="50px">
+            <li> <strong>Git e Github</strong></li> <br>
+            <img src="./assets/Teufuturoicone.png" width="50px">
+            <li> <strong>TeuFuturo2021</strong></li> <br>
         </ul>
     </div>
 
