Adicionando conceitos basicos de SEO

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Bruno Yathan</title>
-    
+
+    <!--SEO-->
+    <meta name="keywords" content="Currículo, HTML, CSS">
+    <meta name="description" content="Um currículo criado por mim usando os conceitos basicos de HTML5 e CSS3. Com objetivo de demonstrar minhas habilidades nessas 2 linguagens.>
+    <meta name="author" content="Bruno Yathan Diedrich Kehrwald">
+
     <!-- Fonte Personalizada -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
