Adicionando alternativas nas imagens

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         <h3>Certificações:</h3>
 
         <ul>
-            <img src="./assets/Alura icon.jfif" width="50px">
+            <img src="./assets/Alura icon.jfif" width="50px" alt="Icone da instituição Alura">
             <li> <strong>Formação Iniciante em Programação</strong>
             </li> <br>
-            <img src="./assets/Alura icon.jfif" width="50px">
+            <img src="./assets/Alura icon.jfif" width="50px" alt="Icone da instituição Alura">
             <li> <strong>React</strong></li> <br>
-            <img src="./assets/Alura icon.jfif" width="50px">
+            <img src="./assets/Alura icon.jfif" width="50px" alt="Icone da instituição Alura">
             <li> <strong>Git e Github</strong></li> <br>
-            <img src="./assets/Teufuturoicone.png" width="50px">
+            <img src="./assets/Teufuturoicone.png" width="50px" alt="Icone do programa TeuFuturo2021">
             <li> <strong>TeuFuturo2021</strong></li> <br>
         </ul>
     </div>
