--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Bruno Yathan</title>
+    <link rel="icon" type="image/x-icon" href="./assets/iconHacker.png">
 
     <!--SEO-->
     <meta name="keywords" content="Currículo, HTML, CSS">
