--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!--Responsividade-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
+    <!--Folha de Estilo-->
     <link rel="stylesheet" href="./style.css">
+
+    <!--Titulo e Icone-->
     <title>Bruno Yathan</title>
     <link rel="icon" type="image/x-icon" href="./assets/iconHacker.png">
 
