--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!--Responsividade-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+
     <!--Folha de Estilo-->
     <link rel="stylesheet" href="./style.css">
 
@@ -18,7 +18,7 @@
     <!--SEO-->
     <meta name="keywords" content="Currículo, HTML, CSS">
     <meta name="description" content="Um currículo criado por mim usando os conceitos basicos de HTML5 e CSS3. Com objetivo de demonstrar minhas habilidades nessas 2 linguagens.>
-    <meta name="author" content="Bruno Yathan Diedrich Kehrwald">
+    <meta name=" author" content="Bruno Yathan Diedrich Kehrwald">
 
     <!-- Fonte Personalizada -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -44,10 +44,10 @@
         <!--Resumo-->
         <h3>Resumo:</h3>
         <p style="text-align: left;">
-            Estudante de Front-End. Atualmente estou buscando oportunidades
-            que permitam me desenvolver profissionalmente e ganhar experiência dentro do mercado,
-            colaborando com os meus conhecimentos e experiências adquiridos através do curso da IMED,
-            #TeuFuturo2021, e o curso Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
+            Estudante de Front-End. Atualmente estou buscando oportunidades que
+            permitam me <br> desenvolver profissionalmente e ganhar experiência dentro do mercado, <br>
+            colaborando com os meus conhecimentos e experiências adquiridos através do curso <br>
+            Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
         </p>
 
         <!--Formação-->
@@ -60,12 +60,14 @@
         <!--Experiencia-->
         <h3>Experiência:</h3>
 
-        <p>Assistente de SEO na empresa da Digital Business, no Rio Grande do Sul. <br>
-            Onde realizei meu primeiro estágio na vida durante 3 mêses. <br> Foi onde eu aprendi os conceitos basicos de
-            SEO,
-            realizando otimizações de artigos, análise de Palavras-Chave e fazendo a utlização de algumas ferramentas
-            como
-            por exemplo o Google Analytics, Google Search Console, Semrush e o Screaming Frog.
+        <p>
+            Assistente de SEO na empresa Digital Business. <br>
+            Foi onde eu realizei o meu primeiro estágio como assistente de SEO<br>
+            Aprendi os conceitos basicos sobre Search Engine Optimization (SEO)<br>
+            realizando otimizações de artigos, análise de palavras-chaves,<br>
+            análise de concorrentes, análise de desempenho de sites. Tudo isso<br>
+            utilizando algumas ferramenta como por exemplo o Google Analytics, Semrush,<br>
+            Screaming Frog e algumas outras ferramentas.
         </p>
 
         <!--Certificações-->
