--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
         <!--Resumo-->
         <h3>Resumo:</h3>
-        <p style="text-align: left;">
+        <p>
             Estudante de Front-End. Atualmente estou buscando oportunidades que
-            permitam me <br> desenvolver profissionalmente e ganhar experiência dentro do mercado, <br>
-            colaborando com os meus conhecimentos e experiências adquiridos através do curso <br>
+            permitam me desenvolver profissionalmente e ganhar experiência dentro do mercado,
+            colaborando com os meus conhecimentos e experiências adquiridos através do curso 
             Dev Web Full Stack do Igor Oliveira, o ProgramadorBr.
         </p>
 
@@ -61,12 +61,12 @@
         <h3>Experiência:</h3>
 
         <p>
-            Assistente de SEO na empresa Digital Business. <br>
-            Foi onde eu realizei o meu primeiro estágio como assistente de SEO<br>
-            Aprendi os conceitos basicos sobre Search Engine Optimization (SEO)<br>
-            realizando otimizações de artigos, análise de palavras-chaves,<br>
-            análise de concorrentes, análise de desempenho de sites. Tudo isso<br>
-            utilizando algumas ferramenta como por exemplo o Google Analytics, Semrush,<br>
+            Assistente de SEO na empresa Digital Business. 
+            Foi onde eu realizei o meu primeiro estágio como assistente de SEO
+            Aprendi os conceitos basicos sobre Search Engine Optimization (SEO)
+            realizando otimizações de artigos, análise de palavras-chaves,
+            análise de concorrentes, análise de desempenho de sites. Tudo isso
+            utilizando algumas ferramenta como por exemplo o Google Analytics, Semrush,
             Screaming Frog e algumas outras ferramentas.
         </p>
 
