Adicionando (Hover) a tag ancora.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <br>
             <strong>Email:</strong> brunodiedrich@gmail.com
             <br>
-            <strong>Linkedin:</strong><a target="_blank" href="https://www.linkedin.com/in/bruno-yathan/">
+            <strong>Linkedin:</strong><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/bruno-yathan/">
                 Bruno-Yathan</a>
             <br>
             <strong>Telefone:</strong> (51) 999273147
